--- a/styles.css
+++ b/styles.css
@@ -67,3 +67,32 @@ a {
     font-size: 14px;
     margin-top: 8px;
 }
+
+.sub-header{
+    display: flex;
+    justify-content: center;
+    padding: 2rem;
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+}
+
+.blank-image {
+    border: 4px solid #3882F6;
+    width: 140px;
+    height:120px;
+    border-radius: 8px;
+
+}
+
+.illustration {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    padding-bottom: 5rem;
+}
+
+.info{
+    width:140px;
+    text-align: center;
+}
