--- a/styles.css
+++ b/styles.css
@@ -164,3 +164,12 @@ a {
 .darkblue-text{
     color:#1F2937;
 }
+
+.footer{
+    height: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Now that wasn't so bad was it?/*
